apps/adguardhome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguardhome
  namespace: adguardhome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: mydnschallenge
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - d.doany.io
  rules:
    - host: d.doany.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguardhome-web
                port:
                  number: 443
